--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,1 @@
-/Boss.class
-/Date.class
-/Lop.class
-/Main.class
-/NewLop.class
-/Office/
-/Pattern/
-/People/
-/Person.class
-/Worker.class
+/pattern2/
